# Open-Gate-MQTT-Client

./: .gitmodules  CMakeLists.txt  ReadMe.md  build.sh
docker-build-tool/: Dockerfile
include/: mqttClient.hpp
src/: mqttClient.cpp
